			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: Prolog flags dialect (swi) and version_number (replaces
    old version).  Paul Singleton and Vitor Santos Costa.

  * FIXED: writeq/1 and ~q in format/3 honour numbervars(true).  Ulrich
    Neumerkel.

  * ENHANCED: Error message when using edit/0 if there is no default file.

  * MODIFIED: time_file/2 throws an exception instead of failing silently
    if the time cannot be fetched.

  * MODIFIED: numbers are no longer accepted as filenames.

  * FIXED: Type error in single-threaded compilation.  Lucas Barbuto.

  * FIXED: Exception on halt/1 on type errors.  Ulrich Neumerkel.

  * ENHANCED: DWIM correction: use ~q rather than ~w.

  * FIXED: read_pending_input/3 if 0-bytes are available.  Jeff Rose.

===================================
VERSION 5.6.41 (September 21, 2007)
===================================

  * FIXED: read_pending_input/3 did not trail 2nd argument binding.  Also
    fixed exception.  Jeff Rose.

  * FIXED: exception for put_attr(atom, name, value).  Ulrich Neumerkel.

  * FIXED: Correct exception on too many open files.  Ulrich Neumerkel.

  * FIXED: Possibly crash combining abolish and loading files with a
    :- dynamic directive.  Ulrich Neumerkel.

  * FIXED: Exception on throw(_).  Ulrich Neumerkel.

  * FIXED: Crash on abolish(foo/(-1)).  Ulrich Neumerkel.  Also fixed
    error message on too high arity.

  * FIXED: Crash on unknown predicate if autoloader is switched off.
    Ulrich Neumerkel. 

  * FIXED: catch(_,_,garbage_collect).  More generally, instantiation errors
    in meta-calling could corrupt the local stack.  Ulrich Neumerkel.  

  * FIXED: not_empty_list --> non_empty_list.  Ulrich Neumerkel.
